<?xml version="1.0" encoding="utf-8"?><resources><string name="app_name">BetVision Ultimate</string><string name="login">Entrar</string><string name="register">Cadastrar</string><string name="hint_name">Nome</string><string name="hint_email">Email</string><string name="hint_password">Senha</string><string name="hint_password_confirm">Confirme a senha</string><string name="fill_all">Preencha todos os campos</string><string name="password_mismatch">Senhas não conferem</string><string name="register_success">Cadastrado! Faça login.</string><string name="bet_placed">Aposta registrada (simulada)</string></resources>