<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:padding="24dp" android:layout_width="match_parent" android:layout_height="match_parent"><TextView android:text="Criar Conta" android:textSize="24sp" android:textStyle="bold" android:layout_marginBottom="12dp"/><EditText android:id="@+id/name" android:hint="@string/hint_name" android:layout_width="match_parent" android:layout_height="wrap_content"/><EditText android:id="@+id/email" android:hint="@string/hint_email" android:layout_width="match_parent" android:layout_height="wrap_content"/><EditText android:id="@+id/password" android:hint="@string/hint_password" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="textPassword"/><EditText android:id="@+id/password_confirm" android:hint="@string/hint_password_confirm" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="textPassword"/><Button android:id="@+id/btn_register_submit" android:layout_marginTop="12dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/register"/></LinearLayout>